# ai-handwritten-exam-grading-system

./: .env  .env.example  .gitignore  README.md  alembic.ini  grade.code-workspace  gradeai.db  main.py  pyproject.toml  requirements.txt  run-all.bat  run-all.ps1  run.bat  run.ps1  run_all.py
