[project]
name = "gradeai"
version = "0.1.0"
description = "Open-Source AI-Based Subjective Answer Evaluation System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.0.0",
    "sentence-transformers>=2.2.2",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]
ocr = [
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
]
grammar = [
    "language-tool-python>=2.7.0",
]
stemming = [
    "nltk>=3.8.0",
]
full = [
    "gradeai[ocr,grammar]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gradeai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
